# Parallel_CUDA

./: .gitignore  BenchmarkExporter.h  BenchmarkStats.h  CMakeLists.txt  ConvolutionProcessor.cpp  ConvolutionProcessor.h  CudaConvolutionProcessor.cu  CudaConvolutionProcessor.h  CudaImageProcessingManager.cpp  CudaImageProcessingManager.h  Image.cpp  Image.h  ImageProcessingManager.cpp  ImageProcessingManager.h  PerformanceMonitor.cpp  PerformanceMonitor.h  benchmark_results.csv  environment.yml  main.cpp  main_benchmark.cpp  main_cuda.cpp  script_grafici.py
